# nicechess

./: AUTHORS  Makefile  Makefile.am  Makefile.old  README  README.md  buildcommands.txt  faile_1.4.4_depth.patch  gnuchess_6.2.9_sleep.patch  make.sh
art/: Makefile.am
src/: Makefile.am  basicset.cpp  bitboard.cpp  bitboard.h  board.cpp  board.h  boardmove.cpp  boardmove.h  boardposition.cpp  boardposition.h  boardtheme.cpp  boardtheme.h  boardthemes.h  chessgame.cpp  chessgame.h  chessgamestate.cpp  chessgamestate.h  chessplayer.cpp  chessplayer.h  chessplayers.h  config.h  debugset.cpp  exception.h  fontloader.cpp  fontloader.h  gamecore.cpp  gamecore.h  granitetheme.cpp  humanplayer.cpp  md3model.cpp  md3model.h  md3test.cpp  md3view.cpp  menu.cpp  menu.h  menuitem.cpp  menuitem.h  nicechess.cpp  niceplayer.cpp  objfile.cpp  (+25 more)
